--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 <head>
   <meta charset="utf-8">
   <title> Chloe's personal Site</title>
+  <style>
+
+    body{
+    background-color: #EAF6F6;
+    }
+    hr{
+    width: 10%;
+    border-top: 5px dotted white;
+
+    }
+
+</style>
+
 </head>
 
 <body>
