--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     background-color: #EAF6F6;
     }
     hr{
-    width: 10%;
-    border-top: 5px dotted white;
+    width: 4%;
+    border-top: 5px dotted #074684;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+
 
     }
 
